@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-27T01:43:43Z",
+  "timestamp" : "2022-07-27T16:23:56Z",
   "count_outdated" : 416,
   "uniques_outdated" : 84,
-  "count" : 421,
-  "uniques" : 88,
+  "count" : 422,
+  "uniques" : 89,
   "views" : [
     {
       "timestamp": "2022-07-13T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-07-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
